--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
 .header{
     background-color:  var(--primary-color);
     color: #f8f8f8;;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
     border-radius: 0 0 1rem 1rem;
     margin-bottom: 3rem;
@@ -79,15 +79,18 @@ body {
     font-size: 1.5rem;
 }
 
-.footer {
-    text-align: center;
-    padding: 1.5rem;
-    background-color:  var(--primary-color);
-    color: #f8f8f8;
+.footer-container {
+    background-color:#1a61e9;
+    color: white;
     border-radius: 1rem 1rem 0 0;
+    text-align: center;
+    padding: 1rem;
 }
-
-
+.image-size {
+    width: 2rem;
+    margin: 1rem;
+    
+}
 
 
 
